--- a/src/css/price/style_price.css
+++ b/src/css/price/style_price.css
@@ -407,10 +407,22 @@ display: flex;
 
 /* water-heater-repair-cost */
 
-/* .button-top-global :nth-child(1) {
-  display: none;
-} */
+.head-maintenance {
+  text-align: center;
+    display: grid;
+}
 
+.head-maintenance h2 {
+  margin-bottom: 1%;
+}
+
+.head-maintenance p{
+  text-align: center;
+  margin: 0 0 3% 0;
+  font-size: clamp(16px, 3vw, 20px);
+  max-width: 80%;
+  justify-self: center;
+}
 
 
 
@@ -521,6 +533,10 @@ display: flex;
 
   .head-prices p {
     max-width: 100%;
+}
+
+.head-maintenance p {
+  max-width: 100%;
 }
 
     .money_job-prices {
