--- a/src/pages/price-list/dryer-repair-cost.astro
+++ b/src/pages/price-list/dryer-repair-cost.astro
@@ -1241,14 +1241,14 @@ import "css/price/style_price.css";
         </div>
 
         <div class="questions">
-          <p>If the dryer takes longer to dry your clothes:</p>
-          - Check for a clogged vent or dirty lint filter.<br />
-          - Avoid overloading the dryer.<br />
-          - Ensure the heating element is functioning.<br />
-          - Clear any obstructions from the air intake.<br />
-          - Use the correct drying settings.<br />
-          - Replace worn-out or damaged parts if needed.<br />
-          - Verify the home's ventilation system is clear.
+          <p><b>If the dryer takes longer to dry your clothes:</b></p>
+          <p>- Check for a clogged vent or dirty lint filter.</p>
+          <p>- Avoid overloading the dryer.</p>
+          <p>- Ensure the heating element is functioning.</p>
+          <p>- Clear any obstructions from the air intake.</p>
+          <p>- Use the correct drying settings.</p>
+          <p>- Replace worn-out or damaged parts if needed.</p>
+          <p>- Verify the home's ventilation system is clear.</p>
         </div>
 
         <div class="FAQ">
@@ -1644,8 +1644,6 @@ import "css/price/style_price.css";
 
         <div class="FAQ_bottom"></div>
       </div>
-
-      
     </main>
 
     <Cta />
