--- a/src/pages/price-list/water-heater-repair-cost.astro
+++ b/src/pages/price-list/water-heater-repair-cost.astro
@@ -3,6 +3,7 @@ import Layout from "@layouts/Layout.astro";
 import Container from "@components/container.astro";
 import Btn from "@components/btn.astro";
 import Costanchor from "@components/price-list/components_dryer-repair-cost.astro";
+import Cta from "@components/cta.astro";
 
 import "css/price/style_price.css";
 ---
@@ -1547,6 +1548,10 @@ import "css/price/style_price.css";
 
         <div class="FAQ_bottom"></div>
       </div>
+
     </main>
+
+
+    <Cta/>
   </Container>
 </Layout>
