--- a/src/components/css-components/style-btn.css
+++ b/src/components/css-components/style-btn.css
@@ -123,7 +123,7 @@ box-shadow: 0px 2px 4px -1px rgb(0 0 0 / 20%), 0px 4px 5px 0px rgb(0 0 0 / 14%),
 
 .button-call-global a {
 padding: 13px 10px;
-width: 180px;
+width: 180px !important;
 align-self: center;
 color: #fff;
 }
