--- a/src/pages/price-list/water-heater-repair-cost.astro
+++ b/src/pages/price-list/water-heater-repair-cost.astro
@@ -763,43 +763,7 @@ import "css/price/style_price.css";
         <div class="questions">
           <p>We service all major brands of water heaters such as:</p>
           <p>
-            <b>A.O. Smith</b>
-          </p>
-          <p>
-            <b>Rheem</b>
-          </p>
-          <p>
-            <b>Bradford White</b>
-          </p>
-          <p>
-            <b>American Standard</b>
-          </p>
-          <p>
-            <b>Ecosmart</b>
-          </p>
-          <p>
-            <b>Bosch</b>
-          </p>
-          <p>
-            <b>Takagi</b>
-          </p>
-          <p>
-            <b>Stiebel Eltron</b>
-          </p>
-          <p>
-            <b>State</b>
-          </p>
-          <p>
-            <b>Navien</b>
-          </p>
-          <p>
-            <b>Noritz</b>
-          </p>
-          <p>
-            <b>Tempra</b>
-          </p>
-          <p>
-            <b>Trutankless</b>
+            <b>A.O. Smith, Rheem, Bradford White, American Standard, Ecosmart, Bosch, Takagi, Stiebel Eltron, State, Navien, Noritz, Tempra, Trutankless</b>
           </p>
           <p>
             and more. Feel free to give us a call if you don't find your water
