--- a/src/components/css-components/style-btn.css
+++ b/src/components/css-components/style-btn.css
@@ -70,6 +70,7 @@ box-shadow: 0px 2px 4px -1px rgb(0 0 0 / 20%), 0px 4px 5px 0px rgb(0 0 0 / 14%),
 
 .button-book-global button {
   font-weight: 600;
+  height: 53px;
   line-height: 1.14;
   padding: 12px 24px;
   box-shadow: none;
@@ -84,6 +85,8 @@ box-shadow: 0px 2px 4px -1px rgb(0 0 0 / 20%), 0px 4px 5px 0px rgb(0 0 0 / 14%),
   display: inline-flex;
   outline: 0;
   text-decoration: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
   user-select: none;
   -webkit-appearance: none;
   -webkit-tap-highlight-color: transparent;
@@ -91,7 +94,6 @@ box-shadow: 0px 2px 4px -1px rgb(0 0 0 / 20%), 0px 4px 5px 0px rgb(0 0 0 / 14%),
   text-shadow: none;
   font-weight: normal;
   align-items: center;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
   overflow: auto;
   max-width: 140px;
   justify-self: center;
@@ -112,20 +114,21 @@ box-shadow: 0px 2px 4px -1px rgb(0 0 0 / 20%), 0px 4px 5px 0px rgb(0 0 0 / 14%),
 
 
 .button-call-global {
-  display: inline-block;
+  /* display: inline-block; */
+  display: grid;
   width: 180px;
   background-color: #0f77cc ;
   box-shadow: inset 0px 2px 4px -1px rgb(0 0 0 / 20%), 0px 4px 5px 0px rgb(0 0 0 / 14%), 0px 1px 10px 0px rgb(0 0 0 / 12%);
   border-radius: 7px;
-  display: grid;
   align-self: center;
 }
 
 .button-call-global a {
-padding: 13px 10px;
-width: 180px !important;
-align-self: center;
-color: #fff;
+  padding: 14px 8px;
+  width: 180px !important;
+  align-self: center;
+  color: #fff;
+  margin: 0 !important;
 }
 
 .button-call-global:hover {
