--- a/src/pages/price-list/water-heater-repair-cost.astro
+++ b/src/pages/price-list/water-heater-repair-cost.astro
@@ -752,7 +752,7 @@ import "css/price/style_price.css";
 
         <div class="FAQ">
           <div class="fa">
-            <a><h3>Which brands of water heaters do you service?</h3></a>
+            <h3>Which brands of water heaters do you service?</h3>
           </div>
 
           <div class="fa_plus">︾</div>
@@ -774,7 +774,7 @@ import "css/price/style_price.css";
 
         <div class="FAQ">
           <div class="fa">
-            <a><h3>What factors affect the cost of water heater repair?</h3></a>
+            <h3>What factors affect the cost of water heater repair?</h3>
           </div>
 
           <div class="fa_plus">︾</div>
@@ -843,12 +843,10 @@ import "css/price/style_price.css";
 
         <div class="FAQ">
           <div class="fa">
-            <a
-              ><h3>
+            <h3>
                 How is the cost of water heater repairs calculated based on the
                 type of water heater?
-              </h3></a
-            >
+              </h3>
           </div>
 
           <div class="fa_plus">︾</div>
@@ -873,10 +871,9 @@ import "css/price/style_price.css";
 
         <div class="FAQ">
           <div class="fa">
-            <a
-              ><h3>
+            <h3>
                 What should I do if I'm getting too little hot water?
-              </h3></a>
+              </h3>
           </div>
 
           <div class="fa_plus">︾</div>
@@ -899,11 +896,9 @@ import "css/price/style_price.css";
 
         <div class="FAQ">
           <div class="fa">
-            <a
-              ><h3>
+            <h3>
                 What steps should be taken if a water heater has sprung a leak?
-              </h3></a
-            >
+              </h3>
           </div>
 
           <div class="fa_plus">︾</div>
@@ -927,11 +922,9 @@ import "css/price/style_price.css";
 
         <div class="FAQ">
           <div class="fa">
-            <a
-              ><h3>
+            <h3>
                 What are the typical costs involved in gas water heater repairs?
-              </h3></a
-            >
+              </h3>
           </div>
 
           <div class="fa_plus">︾</div>
@@ -956,11 +949,10 @@ import "css/price/style_price.css";
 
         <div class="FAQ">
           <div class="fa">
-            <a
-              ><h3>
+            <h3>
                 Can you break down the typical costs involved in hot water
                 heater repairs?
-              </h3></a>
+              </h3>
           </div>
 
           <div class="fa_plus">︾</div>
@@ -984,11 +976,9 @@ import "css/price/style_price.css";
 
         <div class="FAQ">
           <div class="fa">
-            <a
-              ><h3>
+            <h3>
                 When should the anode rod in a water heater be replaced?
-              </h3></a
-            >
+              </h3>
           </div>
 
           <div class="fa_plus">︾</div>
@@ -1009,11 +999,9 @@ import "css/price/style_price.css";
 
         <div class="FAQ">
           <div class="fa">
-            <a
-              ><h3>
+            <h3>
                 Should I attempt DIY water heater repair or hire a professional?
-              </h3></a
-            >
+              </h3>
           </div>
 
           <div class="fa_plus">︾</div>
@@ -1037,7 +1025,7 @@ import "css/price/style_price.css";
 
         <div class="FAQ">
           <div class="fa">
-            <a><h3>What are the benefits of flushing your water heater?</h3></a>
+            <h3>What are the benefits of flushing your water heater?</h3>
           </div>
 
           <div class="fa_plus">︾</div>
@@ -1060,12 +1048,10 @@ import "css/price/style_price.css";
 
         <div class="FAQ">
           <div class="fa">
-            <a
-              ><h3>
+            <h3>
                 How much does it typically cost to replace a thermostat on a
                 water heater?
-              </h3></a
-            >
+              </h3>
           </div>
 
           <div class="fa_plus">︾</div>
@@ -1086,7 +1072,7 @@ import "css/price/style_price.css";
 
         <div class="FAQ">
           <div class="fa">
-            <a><h3>What is the cost of replacing an expansion tank?</h3></a>
+            <h3>What is the cost of replacing an expansion tank?</h3>
           </div>
 
           <div class="fa_plus">︾</div>
@@ -1107,11 +1093,9 @@ import "css/price/style_price.css";
 
         <div class="FAQ">
           <div class="fa">
-            <a
-              ><h3>
+            <h3>
                 How much does it cost to replace a pressure relief valve DIY?
-              </h3></a
-            >
+              </h3>
           </div>
 
           <div class="fa_plus">︾</div>
@@ -1131,12 +1115,10 @@ import "css/price/style_price.css";
 
         <div class="FAQ">
           <div class="fa">
-            <a
-              ><h3>
+            <h3>
                 What are the costs associated with DIY replacement of a heater
                 element in electric water heaters?
-              </h3></a
-            >
+              </h3>
           </div>
 
           <div class="fa_plus">︾</div>
@@ -1156,12 +1138,10 @@ import "css/price/style_price.css";
 
         <div class="FAQ">
           <div class="fa">
-            <a
-              ><h3>
+            <h3>
                 What are the DIY costs for replacing a thermocouple in gas
                 heaters?
-              </h3></a
-            >
+              </h3>
           </div>
 
           <div class="fa_plus">︾</div>
@@ -1182,7 +1162,7 @@ import "css/price/style_price.css";
 
         <div class="FAQ">
           <div class="fa">
-            <a><h3>How much does valve replacement cost?</h3></a>
+            <h3>How much does valve replacement cost?</h3>
           </div>
 
           <div class="fa_plus">︾</div>
@@ -1204,7 +1184,7 @@ import "css/price/style_price.css";
 
         <div class="FAQ">
           <div class="fa">
-            <a><h3>What is the cost of DIY dip tube replacement?</h3></a>
+            <h3>What is the cost of DIY dip tube replacement?</h3>
           </div>
 
           <div class="fa_plus">︾</div>
@@ -1225,7 +1205,7 @@ import "css/price/style_price.css";
 
         <div class="FAQ">
           <div class="fa">
-            <a><h3>What does it cost to replace a flue vent pipe?</h3></a>
+            <h3>What does it cost to replace a flue vent pipe?</h3>
           </div>
 
           <div class="fa_plus">︾</div>
@@ -1246,11 +1226,9 @@ import "css/price/style_price.css";
 
         <div class="FAQ">
           <div class="fa">
-            <a
-              ><h3>
+            <h3>
                 How much does it typically cost to replace a water heater?
-              </h3></a
-            >
+              </h3>
           </div>
 
           <div class="fa_plus">︾</div>
@@ -1272,11 +1250,9 @@ import "css/price/style_price.css";
 
         <div class="FAQ">
           <div class="fa">
-            <a
-              ><h3>
+            <h3>
                 Is it normal for the pilot light to go out on a water heater?
-              </h3></a
-            >
+              </h3>
           </div>
 
           <div class="fa_plus">︾</div>
@@ -1298,12 +1274,10 @@ import "css/price/style_price.css";
 
         <div class="FAQ">
           <div class="fa">
-            <a>
               <h3>
                 What should be considered when choosing a replacement water
                 heater?
-              </h3></a
-            >
+              </h3>
           </div>
 
           <div class="fa_plus">︾</div>
@@ -1327,11 +1301,9 @@ import "css/price/style_price.css";
 
         <div class="FAQ">
           <div class="fa">
-            <a
-              ><h3>
+            <h3>
                 What does timer replacement entail, and what does it cost?
-              </h3></a
-            >
+              </h3>
           </div>
 
           <div class="fa_plus">︾</div>
@@ -1354,12 +1326,10 @@ import "css/price/style_price.css";
 
         <div class="FAQ">
           <div class="fa">
-            <a
-              ><h3>
+            <h3>
                 What additional considerations are there for water heater
                 maintenance?
-              </h3></a
-            >
+              </h3>
           </div>
 
           <div class="fa_plus">︾</div>
@@ -1381,7 +1351,7 @@ import "css/price/style_price.css";
 
         <div class="FAQ">
           <div class="fa">
-            <a><h3>What are some common issues with gas heaters?</h3></a>
+            <h3>What are some common issues with gas heaters?</h3>
           </div>
 
           <div class="fa_plus">︾</div>
@@ -1402,11 +1372,9 @@ import "css/price/style_price.css";
 
         <div class="FAQ">
           <div class="fa">
-            <a
-              ><h3>
+            <h3>
                 What different types of water heater repairs are there?
-              </h3></a
-            >
+              </h3>
           </div>
 
           <div class="fa_plus">︾</div>
@@ -1428,11 +1396,9 @@ import "css/price/style_price.css";
 
         <div class="FAQ">
           <div class="fa">
-            <a
-              ><h3>
+            <h3>
                 When should you consider replacing your old hot water heater?
-              </h3></a
-            >
+              </h3>
           </div>
 
           <div class="fa_plus">︾</div>
@@ -1453,12 +1419,10 @@ import "css/price/style_price.css";
 
         <div class="FAQ">
           <div class="fa">
-            <a
-              ><h3>
+            <h3>
                 How can I determine if my hot water heater needs repair and what
                 steps should I take to have my water heater fixed?
-              </h3></a
-            >
+              </h3>
           </div>
 
           <div class="fa_plus">︾</div>
@@ -1482,12 +1446,7 @@ import "css/price/style_price.css";
 
         <div class="FAQ">
           <div class="fa">
-            <a
-              ><h3>
-                What are some tips for saving money on water heater repair
-                costs?
-              </h3></a
-            >
+            <h3>What are some tips for saving money on water heater repaircosts?</h3>
           </div>
 
           <div class="fa_plus">︾</div>
