--- a/src/components/cta.astro
+++ b/src/components/cta.astro
@@ -11,7 +11,10 @@ import { Icon } from "astro-icon";
   <a style="width:190px; background-color:#000000; color:#ffffff; padding:10px; border-radius: 5px; display:inline-block;" title="" href="tel:+14243250520">Call: (424) 325-0520</a> 
 </div>
 
-<script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
+
+<!-- скрипт отзывов грузит страницу на 17кб -->
+<script defer src="https://static.elfsight.com/platform/platform.js" data-use-service-core ></script>
+
 <div class="elfsight-app-b69045ef-2bc6-4ac0-a4a3-5c17e1820cd5" data-elfsight-app-lazy></div>
 <!--End reviews -->
 
