--- a/src/css/price/style_price.css
+++ b/src/css/price/style_price.css
@@ -70,7 +70,7 @@ h2 {
 }
 
 .col-two p:nth-child(1){
-padding-top: 2%;
+padding-top: 1%;
 }
 
 .col-two p:nth-child(2){
@@ -244,7 +244,7 @@ display: flex;
     display: none;
   }
   
-  .FAQ:hover .fa a {
+  .FAQ:hover .fa h3 {
     color: #2c7bc0;
     text-shadow: 0.1px 0.1px 0.1px #000;
     transition: all 0.25s linear;
