--- a/src/pages/price-list/water-heater-repair-cost.astro
+++ b/src/pages/price-list/water-heater-repair-cost.astro
@@ -31,16 +31,13 @@ import "css/price/style_price.css";
       <h1><span class="animate-charcter">Water Heater Repair Cost</span></h1>
 
       <div class="two-col-grid">
-        <div class="col-one">
-          <img
-            class="img-header"
-            src="/img-price/water-heater-repair-cost/water-heater-repair-1.webp"
-            width="500"
-            height="500"
-            alt="Dryer Repair Cost"
-          />
 
-          <Btn />
+        <div class="col-one">
+          <img src="/img-price/water-heater-repair-cost/water-heater-repair-1.webp"
+            alt="WATER HEATER REPAIR COST"/>
+            
+
+          <Btn/>
         </div>
 
         <div class="col-two">
