--- a/src/css/price/style_price.css
+++ b/src/css/price/style_price.css
@@ -61,16 +61,26 @@ h2 {
   margin: 0;
 }
 
-.img-header {
+
+
+.col-one {
+  max-width: 500px;
+}
+
+.col-one img {
+  width: 100%;
+  max-width: 500px;
+  margin-bottom: 25px;
   box-shadow: 0px 3px 5px 2px rgb(0 0 0 / 25%), 0px 4px 5px 0px rgb(0 0 0 / 14%), 0px 5px 14px 0px rgb(0 0 0 / 12%);
 }
 
+
+
+
+
+
 .col-two {
   grid-column: auto;
-}
-
-.col-two p:nth-child(1){
-padding-top: 1%;
 }
 
 .col-two p:nth-child(2){
@@ -83,7 +93,7 @@ padding-top: 1%;
 }
 
 .col-one {
-  margin: 0 15px 15px 0;
+  margin: 0 25px 15px 0;
   float: left;
 }
 
@@ -246,7 +256,7 @@ display: flex;
   
   .FAQ:hover .fa h3 {
     color: #2c7bc0;
-    text-shadow: 0.1px 0.1px 0.1px #000;
+    /* text-shadow: 0.1px 0.1px 0.1px #000; */
     transition: all 0.25s linear;
 }
   
@@ -463,19 +473,19 @@ display: flex;
     .col-one img {
         /* width: 80%; */
         justify-self: center;
-        margin: 0;
+        margin-bottom: 10px;
     }
 
     .col-one {
-        width: 100%;
-        margin: 0;
-    }
+      width: 100%;
+      margin: 0;
+      max-width: 100%;
+  }
 
     .col-one a{
         width: 100%;
         margin: 0;
         display: grid;
-        margin-bottom: 2%;
         text-align: center;
     }
 
