--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -32,8 +32,10 @@ const makeTitle = title
     <!--Bing Webmaster Tools -->
     <meta name="msvalidate.01" content="F2723BD576AB7FA778D3F53898576D0B" />
     <!-- <link rel="preload" as="image" href={src} alt="Hero" /> -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-F5MBY27XES"></script>
+
     
+<!-- сбор статистики -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-F5MBY27XES"></script>
       <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
