--- a/src/pages/price-list/dryer-repair-cost.astro
+++ b/src/pages/price-list/dryer-repair-cost.astro
@@ -12,6 +12,7 @@ import Costanchor from "@components/price-list/components_dryer-repair-cost.astr
 import "css/price/style_price.css";
 ---
 
+<!-- частые вопросы -->
 <script defer>
   document.addEventListener("DOMContentLoaded", function () {
     let coll = document.getElementsByClassName("FAQ");
@@ -29,6 +30,7 @@ import "css/price/style_price.css";
   });
 </script>
 
+
 <Layout title="Dryer Repair Cost">
   <Container>
     <main>
@@ -36,10 +38,7 @@ import "css/price/style_price.css";
 
       <div class="two-col-grid">
         <div class="col-one">
-          <img
-            src="/images/lg-dryer-repair.webp"
-            alt="Dryer Repair Cost"
-          />
+          <img src="/images/lg-dryer-repair.webp" alt="Dryer Repair Cost">
 
           <Contactbtn />
         </div>
