--- a/src/pages/price-list/water-heater-repair-cost.astro
+++ b/src/pages/price-list/water-heater-repair-cost.astro
@@ -8,6 +8,7 @@ import Cta from "@components/cta.astro";
 import "css/price/style_price.css";
 ---
 
+<!-- частые вопросы -->
 <script defer>
   document.addEventListener("DOMContentLoaded", function () {
     let coll = document.getElementsByClassName("FAQ");
@@ -34,7 +35,7 @@ import "css/price/style_price.css";
 
         <div class="col-one">
           <img src="/img-price/water-heater-repair-cost/water-heater-repair-1.webp"
-            alt="WATER HEATER REPAIR COST"/>
+            alt="WATER HEATER REPAIR COST">
             
 
           <Btn/>
