--- a/src/css/price/style_price.css
+++ b/src/css/price/style_price.css
@@ -68,8 +68,9 @@ h2 {
 }
 
 .col-one img {
-  width: 100%;
-  max-width: 500px;
+  width: 500px;
+  max-width: 100%;
+  height: auto;
   margin-bottom: 25px;
   box-shadow: 0px 3px 5px 2px rgb(0 0 0 / 25%), 0px 4px 5px 0px rgb(0 0 0 / 14%), 0px 5px 14px 0px rgb(0 0 0 / 12%);
 }
