--- a/src/css/price/style_price.css
+++ b/src/css/price/style_price.css
@@ -64,13 +64,13 @@ h2 {
 
 
 .col-one {
-  max-width: 500px;
+  /* max-width: 500px; */
 }
 
 .col-one img {
-  width: 500px;
+  /* width: 500px; */
   max-width: 100%;
-  height: 500px;
+  /* height: 500px; */
   height: auto;
   margin-bottom: 25px;
   box-shadow: 0px 3px 5px 2px rgb(0 0 0 / 25%), 0px 4px 5px 0px rgb(0 0 0 / 14%), 0px 5px 14px 0px rgb(0 0 0 / 12%);
@@ -485,7 +485,7 @@ display: flex;
   }
 
     .col-one a{
-        /* width: 100%; */
+        width: 100%;
         margin: 0;
         display: grid;
         text-align: center;
