--- a/src/css/price/style_price.css
+++ b/src/css/price/style_price.css
@@ -569,12 +569,12 @@ display: flex;
 
 
 
-  @media (max-width:425px) { 
+  /* @media (max-width:425px) { 
     .col-one img  {
       width: 300px;
       height: 300px;
     }
-  }
+  } */
 
 
 
