--- a/src/pages/price-list/dryer-repair-cost.astro
+++ b/src/pages/price-list/dryer-repair-cost.astro
@@ -38,7 +38,7 @@ import "css/price/style_price.css";
 
       <div class="two-col-grid">
         <div class="col-one">
-          <img src="/images/lg-dryer-repair.webp" alt="Dryer Repair Cost">
+          <img width="500px" height="500px" src="/images/lg-dryer-repair.webp" alt="Dryer Repair Cost">
 
           <Contactbtn />
         </div>
