--- a/src/pages/price-list/water-heater-repair-cost.astro
+++ b/src/pages/price-list/water-heater-repair-cost.astro
@@ -34,7 +34,7 @@ import "css/price/style_price.css";
       <div class="two-col-grid">
 
         <div class="col-one">
-          <img width="500px" height="100px" src="/img-price/water-heater-repair-cost/water-heater-repair-1.webp"
+          <img width="500px" src="/img-price/water-heater-repair-cost/water-heater-repair-1.webp"
             alt="WATER HEATER REPAIR COST">
             
 
