--- a/src/pages/price-list/water-heater-repair-cost.astro
+++ b/src/pages/price-list/water-heater-repair-cost.astro
@@ -32,13 +32,14 @@ import "css/price/style_price.css";
       <h1><span class="animate-charcter">Water Heater Repair Cost</span></h1>
 
       <div class="two-col-grid">
-
         <div class="col-one">
-          <img width="500px" src="/img-price/water-heater-repair-cost/water-heater-repair-1.webp"
-            alt="WATER HEATER REPAIR COST">
-            
+          <img
+            width="500px"
+            src="/img-price/water-heater-repair-cost/water-heater-repair-1.webp"
+            alt="WATER HEATER REPAIR COST"
+          />
 
-          <Btn/>
+          <Btn />
         </div>
 
         <div class="col-two">
@@ -761,7 +762,11 @@ import "css/price/style_price.css";
         <div class="questions">
           <p>We service all major brands of water heaters such as:</p>
           <p>
-            <b>A.O. Smith, Rheem, Bradford White, American Standard, Ecosmart, Bosch, Takagi, Stiebel Eltron, State, Navien, Noritz, Tempra, Trutankless</b>
+            <b
+              >A.O. Smith, Rheem, Bradford White, American Standard, Ecosmart,
+              Bosch, Takagi, Stiebel Eltron, State, Navien, Noritz, Tempra,
+              Trutankless</b
+            >
           </p>
           <p>
             and more. Feel free to give us a call if you don't find your water
@@ -842,9 +847,9 @@ import "css/price/style_price.css";
         <div class="FAQ">
           <div class="fa">
             <h3>
-                How is the cost of water heater repairs calculated based on the
-                type of water heater?
-              </h3>
+              How is the cost of water heater repairs calculated based on the
+              type of water heater?
+            </h3>
           </div>
 
           <div class="fa_plus">︾</div>
@@ -869,9 +874,7 @@ import "css/price/style_price.css";
 
         <div class="FAQ">
           <div class="fa">
-            <h3>
-                What should I do if I'm getting too little hot water?
-              </h3>
+            <h3>What should I do if I'm getting too little hot water?</h3>
           </div>
 
           <div class="fa_plus">︾</div>
@@ -895,8 +898,8 @@ import "css/price/style_price.css";
         <div class="FAQ">
           <div class="fa">
             <h3>
-                What steps should be taken if a water heater has sprung a leak?
-              </h3>
+              What steps should be taken if a water heater has sprung a leak?
+            </h3>
           </div>
 
           <div class="fa_plus">︾</div>
@@ -921,8 +924,8 @@ import "css/price/style_price.css";
         <div class="FAQ">
           <div class="fa">
             <h3>
-                What are the typical costs involved in gas water heater repairs?
-              </h3>
+              What are the typical costs involved in gas water heater repairs?
+            </h3>
           </div>
 
           <div class="fa_plus">︾</div>
@@ -948,9 +951,9 @@ import "css/price/style_price.css";
         <div class="FAQ">
           <div class="fa">
             <h3>
-                Can you break down the typical costs involved in hot water
-                heater repairs?
-              </h3>
+              Can you break down the typical costs involved in hot water heater
+              repairs?
+            </h3>
           </div>
 
           <div class="fa_plus">︾</div>
@@ -974,9 +977,7 @@ import "css/price/style_price.css";
 
         <div class="FAQ">
           <div class="fa">
-            <h3>
-                When should the anode rod in a water heater be replaced?
-              </h3>
+            <h3>When should the anode rod in a water heater be replaced?</h3>
           </div>
 
           <div class="fa_plus">︾</div>
@@ -998,8 +999,8 @@ import "css/price/style_price.css";
         <div class="FAQ">
           <div class="fa">
             <h3>
-                Should I attempt DIY water heater repair or hire a professional?
-              </h3>
+              Should I attempt DIY water heater repair or hire a professional?
+            </h3>
           </div>
 
           <div class="fa_plus">︾</div>
@@ -1047,9 +1048,9 @@ import "css/price/style_price.css";
         <div class="FAQ">
           <div class="fa">
             <h3>
-                How much does it typically cost to replace a thermostat on a
-                water heater?
-              </h3>
+              How much does it typically cost to replace a thermostat on a water
+              heater?
+            </h3>
           </div>
 
           <div class="fa_plus">︾</div>
@@ -1092,8 +1093,8 @@ import "css/price/style_price.css";
         <div class="FAQ">
           <div class="fa">
             <h3>
-                How much does it cost to replace a pressure relief valve DIY?
-              </h3>
+              How much does it cost to replace a pressure relief valve DIY?
+            </h3>
           </div>
 
           <div class="fa_plus">︾</div>
@@ -1114,9 +1115,9 @@ import "css/price/style_price.css";
         <div class="FAQ">
           <div class="fa">
             <h3>
-                What are the costs associated with DIY replacement of a heater
-                element in electric water heaters?
-              </h3>
+              What are the costs associated with DIY replacement of a heater
+              element in electric water heaters?
+            </h3>
           </div>
 
           <div class="fa_plus">︾</div>
@@ -1137,9 +1138,9 @@ import "css/price/style_price.css";
         <div class="FAQ">
           <div class="fa">
             <h3>
-                What are the DIY costs for replacing a thermocouple in gas
-                heaters?
-              </h3>
+              What are the DIY costs for replacing a thermocouple in gas
+              heaters?
+            </h3>
           </div>
 
           <div class="fa_plus">︾</div>
@@ -1224,9 +1225,7 @@ import "css/price/style_price.css";
 
         <div class="FAQ">
           <div class="fa">
-            <h3>
-                How much does it typically cost to replace a water heater?
-              </h3>
+            <h3>How much does it typically cost to replace a water heater?</h3>
           </div>
 
           <div class="fa_plus">︾</div>
@@ -1249,8 +1248,8 @@ import "css/price/style_price.css";
         <div class="FAQ">
           <div class="fa">
             <h3>
-                Is it normal for the pilot light to go out on a water heater?
-              </h3>
+              Is it normal for the pilot light to go out on a water heater?
+            </h3>
           </div>
 
           <div class="fa_plus">︾</div>
@@ -1272,10 +1271,10 @@ import "css/price/style_price.css";
 
         <div class="FAQ">
           <div class="fa">
-              <h3>
-                What should be considered when choosing a replacement water
-                heater?
-              </h3>
+            <h3>
+              What should be considered when choosing a replacement water
+              heater?
+            </h3>
           </div>
 
           <div class="fa_plus">︾</div>
@@ -1299,9 +1298,7 @@ import "css/price/style_price.css";
 
         <div class="FAQ">
           <div class="fa">
-            <h3>
-                What does timer replacement entail, and what does it cost?
-              </h3>
+            <h3>What does timer replacement entail, and what does it cost?</h3>
           </div>
 
           <div class="fa_plus">︾</div>
@@ -1325,9 +1322,9 @@ import "css/price/style_price.css";
         <div class="FAQ">
           <div class="fa">
             <h3>
-                What additional considerations are there for water heater
-                maintenance?
-              </h3>
+              What additional considerations are there for water heater
+              maintenance?
+            </h3>
           </div>
 
           <div class="fa_plus">︾</div>
@@ -1370,9 +1367,7 @@ import "css/price/style_price.css";
 
         <div class="FAQ">
           <div class="fa">
-            <h3>
-                What different types of water heater repairs are there?
-              </h3>
+            <h3>What different types of water heater repairs are there?</h3>
           </div>
 
           <div class="fa_plus">︾</div>
@@ -1395,8 +1390,8 @@ import "css/price/style_price.css";
         <div class="FAQ">
           <div class="fa">
             <h3>
-                When should you consider replacing your old hot water heater?
-              </h3>
+              When should you consider replacing your old hot water heater?
+            </h3>
           </div>
 
           <div class="fa_plus">︾</div>
@@ -1418,9 +1413,9 @@ import "css/price/style_price.css";
         <div class="FAQ">
           <div class="fa">
             <h3>
-                How can I determine if my hot water heater needs repair and what
-                steps should I take to have my water heater fixed?
-              </h3>
+              How can I determine if my hot water heater needs repair and what
+              steps should I take to have my water heater fixed?
+            </h3>
           </div>
 
           <div class="fa_plus">︾</div>
@@ -1444,7 +1439,9 @@ import "css/price/style_price.css";
 
         <div class="FAQ">
           <div class="fa">
-            <h3>What are some tips for saving money on water heater repaircosts?</h3>
+            <h3>
+              What are some tips for saving money on water heater repaircosts?
+            </h3>
           </div>
 
           <div class="fa_plus">︾</div>
@@ -1469,10 +1466,8 @@ import "css/price/style_price.css";
 
         <div class="FAQ_bottom"></div>
       </div>
-
     </main>
 
-
-    <Cta/>
+    <Cta />
   </Container>
 </Layout>
