--- a/src/components/price-list/components_dryer-repair-cost.astro
+++ b/src/components/price-list/components_dryer-repair-cost.astro
@@ -1,17 +1,11 @@
 ---
 import "components/css-components/style-components_cost-anchor.css";
-
 ---
 
-
-
-
 <div class="faq-price-list">
-
-    <p>
-        <a class="anchor" href="#labor-cost">Labor Cost </a>
-        |<a class="anchor" href="#parts-cost">Parts Cost </a>
-        |<a class="anchor" href="#faq">FAQs </a>
-    </p>
-
+  <p>
+    <a class="anchor" href="#labor-cost-anchor">Labor Cost </a>
+    |<a class="anchor" href="#parts-cost-anchor">Parts Cost </a>
+    |<a class="anchor" href="#faqs-anchor">FAQs </a>
+  </p>
 </div>
