--- a/src/pages/price-list/water-heater-repair-cost.astro
+++ b/src/pages/price-list/water-heater-repair-cost.astro
@@ -308,7 +308,7 @@ import "css/price/style_price.css";
       </div>
       <Btn />
 
-      <div class="job-prices">
+      <div class="job-prices" id="labor-cost-anchor">
         <div class="head-prices">
           <h2>Water Heater Repair Cost - Labor Only Excluding Parts</h2>
           <p>
@@ -450,7 +450,7 @@ import "css/price/style_price.css";
       </div>
       <Btn />
 
-      <div class="job-prices">
+      <div class="job-prices" id="parts-cost-anchor">
         <div class="head-prices">
           <h2>Water Heater Replacement Parts Cost</h2>
           <p>
@@ -747,7 +747,7 @@ import "css/price/style_price.css";
       </div>
       <Btn />
 
-      <div class="faq-full">
+      <div class="faq-full" id="faqs-anchor">
         <h2>FAQs</h2>
 
         <div class="FAQ">
