--- a/src/pages/price-list/dryer-repair-cost.astro
+++ b/src/pages/price-list/dryer-repair-cost.astro
@@ -30,7 +30,6 @@ import "css/price/style_price.css";
   });
 </script>
 
-
 <Layout title="Dryer Repair Cost">
   <Container>
     <main>
@@ -38,7 +37,12 @@ import "css/price/style_price.css";
 
       <div class="two-col-grid">
         <div class="col-one">
-          <img width="500px" height="500px" src="/images/lg-dryer-repair.webp" alt="Dryer Repair Cost">
+          <img
+            width="500px"
+            height="500px"
+            src="/images/lg-dryer-repair.webp"
+            alt="Dryer Repair Cost"
+          />
 
           <Contactbtn />
         </div>
@@ -307,7 +311,7 @@ import "css/price/style_price.css";
 
       <Btn />
 
-      <div class="job-prices">
+      <div class="job-prices" id="labor-cost-anchor">
         <div class="head-prices">
           <h2>Dryer Repair Cost - Labor Only Excluding Parts</h2>
           <p>
@@ -599,7 +603,7 @@ import "css/price/style_price.css";
 
       <Btn />
 
-      <div class="job-prices">
+      <div class="job-prices" id="parts-cost-anchor">
         <div class="head-prices">
           <h2>Dryer Replacement Parts Costs</h2>
           <p>
@@ -729,7 +733,7 @@ import "css/price/style_price.css";
 
       <Btn />
 
-      <div class="faq-full">
+      <div class="faq-full" id="faqs-anchor">
         <h2>FAQs</h2>
 
         <div class="FAQ">
